# pbicgstab-ilu0

./: .gitignore  CMakeLists.txt  README.md  bicgstab.cu  bicgstab.cuh  ilu.cu  ilu.cuh  license  main.cpp  mpirundboat.sh  mpirunkcs.sh  record.txt  solve.hpp  作品申报书.docx  项目介绍PPT.pptx
solver/: bicgstab.cu  bicgstab.cuh  ilu.cu  ilu.cuh
